# Kernel

./: .editorconfig  .gitignore  .gitmodules  Doxyfile  LICENSE  Makefile  Makefile.am  README.md  configure.ac  grub.cfg  linker.ld  sse.asm
assembly/: boot.asm  help.c
bootstrap/: Makefile  Makefile.am  configure.ac  linker.ld
bootstrap/src/asm/: boot.asm  gdt.asm  helper.asm  idt.asm  x86_64.asm
bootstrap/src/c/: alloc.c  arith64.c  elf.c  gdt.c  help.c  idt.c  interface.c  main.c  pml4.c  util.c
bootstrap/src/c/elf/: elf.c
bootstrap/src/c/fs/: initramfs.c
bootstrap/src/c/include/: alloc.h  arctan.h  arith64.h  elf.h  gdt.h  global.h  idt.h  interface.h  multiboot2.h  pml4.h  util.h
kernel/: Makefile  Makefile.am  configure.ac  linker.ld
kernel/src/asm/: entry.asm
kernel/src/c/: kernel.c  mbi_struct.c  util.c
ports/: Makefile
ports/mlibc/: Makefile  arctan_crossfile.txt  meson.build.patch
src/asm/: entry.asm
src/c/: kernel.c  util.c
src/c/arch/: smp.c  start.c
src/c/boot/: mb2.c  parse.c
src/c/fs/: graph.c  vfs.c
src/c/include/: arctan.h  config.h  global.h  util.h
src/c/interface/: printf.c  terminal.c
src/c/lib/: atomics.c  perms.c  resource.c  util.c
src/c/loaders/: elf.c
src/c/mm/: allocator.c  buddy.c  freelist.c  pmm.c  slab.c  vmm.c
src/c/mp/: smp.c
src/c/multiboot/: mbparse.c
src/c/uacpi/: default_handlers.c  event.c  interpreter.c  io.c  kernel_api.c  mutex.c  namespace.c  notify.c  opcodes.c  opregion.c  osi.c  registers.c  resources.c  shareable.c  sleep.c  stdlib.c  tables.c  types.c  uacpi.c  utilities.c
(+276 files in other folders)
